# ai-template-langgraph-py

./: .dockerignore  .env.example  .env.langgraph.example  .gitignore  .prettierignore  Dockerfile  README.md  docker-compose.langgraph.yml  docker-compose.yml  langgraph.json  package-lock.json  package.json  poe_tasks.toml  pyproject.toml  requirements.uv.tool.txt  ruff.toml
.github/actions/checkout/: action.yml
.github/actions/docker_build/: action.yml
.github/actions/helm_lint/: action.yml
.github/actions/helm_setup/: action.yml
.github/actions/node_setup/: action.yml
.github/actions/npm_install/: action.yml
.github/actions/terraform_fmt-check/: action.yml
.github/actions/terraform_init/: action.yml
.github/actions/terraform_install/: action.yml
.github/actions/terraform_setup/: action.yml
.github/actions/terraform_validate/: action.yml
.github/actions/uv_python_install/: action.yml
.github/actions/uv_setup/: action.yml
.github/actions/uv_sync/: action.yml
.github/workflows/: always.yml  branch.helm.yml  branch.python.yml  branch.terra.yml  branch.yml  docker_ci.yml  helm_ci.yml  integration-tests.yml  main.yml  npm_lint.yml  python_ci.yml  terraform_ci.yml  unit-tests.yml  uv_ci.yml
env/: dev.src.sh.example
helm/: values.yaml
helm/templates/: NOTES.txt  deployment.yaml
scripts/langgraph/: build.ba.sh
src/agent/: agent.py  graph.py
src/agent/cli/: __main__.py
src/agent/dependency_injection/: aliases.py  container.py
src/agent/lang_graph/: state.py  state_graph_factory.py
src/agent/utils/: context.py  state.py
terra/: README.md  main.tf  variables.ba.sh
tests/unit_tests/: test_basic.py  test_configuration.py
typings/langgraph/: config.pyi  constants.pyi  errors.pyi  runtime.pyi  types.pyi  typing.pyi  warnings.pyi
typings/langgraph/_internal/: _cache.pyi  _config.pyi  _constants.pyi  _fields.pyi  _future.pyi  _pydantic.pyi  _queue.pyi  _retry.pyi  _runnable.pyi  _scratchpad.pyi  _typing.pyi
typings/langgraph/channels/: base.pyi  binop.pyi  ephemeral_value.pyi  last_value.pyi  (+3 more)
(+51 files in other folders)
