[project]
name = "agent"
version = "0.0.1"
description = "Starter template for making a new agent LangGraph."
authors = [
    { name = "FIXME", email = "FIXME@FIXME.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<4.0"
dependencies = [
    "langgraph>=1.0.0,<2.0",
    "python-dotenv>=1.0.1,<2.0",
]


[project.optional-dependencies]
dev = [
    "mypy>=1.11.1,<2.0",
]

[dependency-groups]
cli = [
    # "pyright>=1.1.408,<2.0",  # TODO
    "ruff>=0.8.2,<0.9.0",
]
dev = [
    "anyio>=4.7.0,<5.0",
    "langgraph-cli[inmem]>=0.4.7,<0.5.0",
    "mypy>=1.13.0,<2.0",
    "pytest>=8.3.5,<9.0",
]

[build-system]
requires = [
    "setuptools>=73.0.0,<74.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "langgraph.templates.agent",
    "agent"
]

[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/agent"
"agent" = "src/agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]
